# ucwmp

./: .gitignore  CMakeLists.txt  builtin.c  cache.c  connreq.c  cwmp.c  cwmp.h  devinfo.json  download.c  events.json  main.c  object.c  object.h  session-attr.c  session-attr.h  session-builtin.c  session-object.c  session-rpc.c  session-rpc.h  session-soap.c  session-soap.h  session.c  soap.c  start-uhttpd.sh  state.c  state.h  strncpyt.h  ubus.c  ucwmp.h  util.h
etc/: cwmp-device.json
etc/config/: cwmp
examples/: events.json
examples/config/: cwmp
httpd/: connreq
mgmt_backend/: CMakeLists.txt  client.h  mgmt_backend.h  parse.c  test.c
model/: example.json
openwrt/cwmp/: Makefile
openwrt/cwmp/files/etc/config/: cwmp
openwrt/cwmp/files/etc/init.d/: cwmp
openwrt/cwmp/files/etc/uci-defaults/: 90-cwmp-defaults
openwrt/cwmp/files/usr/share/cwmp/scripts/: apply.sh  factory-reset.sh
scripts/: apply.sh  factory-reset.sh  reboot.sh
session/: attr.c  attr.h  backend-scal.c  backend-usp.c  backend.c  backend.h  blob_helpers.h  builtin.c  main.c  object.c  object.h  rpc.c  rpc.h  scal.c  scal.h  soap.c  ubus.h  utils.h
